# TrianglesInters

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  init_repo.sh
common_includes/: smart_logger.hpp
example_test/: corr_ans.txt
implementations/: BVH.hpp  solutions_impl.hpp
implementations/geom_primitives/: AABB.hpp  plane.hpp  point.hpp  segment.hpp  triangle.hpp  utils.hpp
include/: BVH.hpp  solutions_impl.hpp
include/geom_primitives/: plane.hpp  triangle.hpp  triangle_fwd.hpp  triangle_with_box.hpp  utils.hpp
realizations/: general_solution.hpp
realizations/BVH_solution/: AABB.hpp  BVH.hpp  solution.hpp
realizations/bruteforce_solution/: bruteforce_solution.hpp
realizations/geom_primitives/: plane.hpp  point.hpp  segment.hpp  triangle.hpp  utils.hpp
tests/: CMakeLists.txt  compare_with_naive.py  requirements.txt  test_opt_BVH_sol_perf.py
tests/bruteforce_solution/: CMakeLists.txt  tests.cpp
tests/display/: display_triangles.py  display_triangles_from_file.py
tests/plane/: CMakeLists.txt
tests/point/: CMakeLists.txt  tests.cpp
tests/segment/: CMakeLists.txt  tests.cpp
tests/tests_gen_scripts/: common.py  gen_in_one_plane_equilaterals.py  gen_in_one_plane_many_inters.py  gen_in_one_plane_no_inters.py  gen_in_one_plane_random.py  generate_tests.sh
tests/tests_gen_scripts/in_one_plane/: gen_equilaterals.py  gen_many_inters.py  gen_no_inters.py  gen_random.py
tests/triangle/: CMakeLists.txt  tests.cpp
tests/utils/: CMakeLists.txt
unit_tests/: AABB_tests.cpp  CMakeLists.txt  bruteforce_solution_tests.cpp  optimized_BVH_solution_tests.cpp  plane_tests.cpp  point_tests.cpp  segment_tests.cpp  triangle_tests.cpp
unit_tests/triangle/: CMakeLists.txt  tests.cpp
unit_tests/utils/: tests.cpp
usecase/: CMakeLists.txt  main.cpp  naive.cpp  optimized_BVH_solution.cpp
